Add functionality to upload data into mysql

--- a/config.ini
+++ b/config.ini
@@ -3,5 +3,25 @@
 [Paths]
 csv_path = /home/user/PycharmProjects/csv_project/etl_project/csv_files
 json_path = /home/user/PycharmProjects/csv_project/etl_project/json_files
+google_application_credentials_path = /home/user/etl_project_credentials/etl-project-407113-cc20e82763d6.json
+
+
+[MySql]
+host=localhost
+user=root
+password=1234
+charset=utf8mb4
+
+
+[Database]
+mysql_database_name=FakeDataDatabase
+mysql_table_name=fake_data_table
+
+
+[BigQuery]
+project_id = etl-project-407113
+dataset_id = etl-project-407113.fake_data
+table_id = etl-project-407113.fake_data.test_table
+
 
 
