Add functionality to upload data to BigQuery

--- a/config.ini
+++ b/config.ini
@@ -20,8 +20,8 @@ mysql_table_name=fake_data_table
 
 [BigQuery]
 project_id = etl-project-407113
-dataset_id = etl-project-407113.fake_data
-table_id = etl-project-407113.fake_data.test_table
+dataset_id = fake_data
+table_id = test_table
 
 
 
