Update config file

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,8 @@
 # config.ini
 
 [Paths]
-csv_path = /home/user/PycharmProjects/csv_project/etl_project/data/csv_files
-json_path = /home/user/PycharmProjects/csv_project/etl_project/data/json_files
+csv_path = data/csv_files
+json_path = data/json_files
 google_application_credentials_path = /home/user/etl_project_credentials/etl-project-407113-cc20e82763d6.json
 
 
