Add full path to directories

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,9 +1,9 @@
 # config.ini
 
 [Paths]
-csv_path = data/csv_files
-json_path = data/json_files
-google_application_credentials_path = /home/user/etl_project_credentials/etl-project-407113-cc20e82763d6.json
+csv_path=/home/user/PycharmProjects/csv_project/etl_project/data/csv_files
+json_path=/home/user/PycharmProjects/csv_project/etl_project/data/json_files
+google_application_credentials_path=/home/user/etl_project_credentials/etl-project-407113-cc20e82763d6.json
 
 
 [MySql]
@@ -19,9 +19,9 @@ mysql_table_name=fake_data_table
 
 
 [BigQuery]
-project_id = etl-project-407113
-dataset_id = fake_data
-table_id = test_table
+project_id=etl-project-407113
+dataset_id=fake_data
+table_id=test_table
 
 
 
