Refactor files to upload data from json to BigQuery

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,6 +3,7 @@
 [Paths]
 csv_path=/home/user/PycharmProjects/csv_project/etl_project/data/csv_files
 json_path=/home/user/PycharmProjects/csv_project/etl_project/data/json_files
+data_file_path=/home/user/PycharmProjects/csv_project/etl_project/data/json_files/output.json
 google_application_credentials_path=/home/user/etl_project_credentials/etl-project-407113-cc20e82763d6.json
 
 
@@ -21,7 +22,7 @@ mysql_table_name=fake_data_table
 [BigQuery]
 project_id=etl-project-407113
 dataset_id=fake_data
-table_id=test_table
+table_id=fake_data
 
 
 
