--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Faker==20.1.0
-mysql_connector_repackaged==0.3.1
-pandas==1.3.4
-protobuf==3.12.4
+Faker==21.0.0
+pandas==2.1.4
+pandas_gbq==0.20.0
+protobuf==4.25.1
+google-cloud-bigquery==3.14.1
